p7/tests/t085.err
Semantic error on line 5: Value passed to exit() must be an integer.  Value passed was of type 'string'.
