p7/tests/t085.gpl
string s = "hello" + " " + "world";

on akey
{
    exit(s);
}
